# mini-fifa

./: .gitignore  BMPImage.hpp  Background.hpp  BackgroundObject.hpp  Ball.hpp  BallObject.hpp  Button.hpp  CMakeLists.txt  Camera.hpp  Client.hpp  ClientObject.hpp  Cursor.hpp  CursorObject.hpp  Debug.hpp  File.hpp  Font.hpp  Framebuffer.hpp  GameObject.hpp  Image.hpp  ImageLoader.hpp  Intelligence.hpp  JPEGImage.hpp  Lobby.hpp  LobbyObject.hpp  Logger.hpp  Mesh.hpp  MetaServer.hpp  MetaServerObject.hpp  Model.hpp  Network.hpp  Optimizations.hpp  PNGImage.hpp  Pipeline.hpp  Pitch.hpp  PitchObject.hpp  Player.hpp  PlayerObject.hpp  Post.hpp  PostObject.hpp  README.md  (+42 more)
assets/woodswing/: woodswing.mtl
doc/: Doxyfile
include/: freetype_config.h  opengl_config.h
resources/: mini-football.desktop
shaders/: ball.frag  bg.vert  btn_quad.frag  btn_quad.vert  btn_text.frag  btn_text.vert  cursor.frag  generic.frag  generic.vert  pitch.frag  post.vert  shadow.frag  shadow.vert
tools/: build_appimage  glsl_validate
