cmake_minimum_required(VERSION 3.0.1)
project(minififa)

message("C++ Compiler ${CMAKE_CXX_COMPILER}")

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 6.0)
        message(FATAL_ERROR "GCC version must be at least 4.8 to support OpenMP")
    endif()
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.8)
        message(FATAL_ERROR "Clang version must be at least 3.8 to support OpenMP.")
    endif()
else()
    message(WARNING "You are using unsupported compiler, and will probably have to change the source code.")
endif()

set(CMAKE_CXX_FLAGS "-std=c++17")

file(GLOB SHADERS shaders/*)
file(GLOB HEADERS *.hpp)

file(COPY resources DESTINATION ${CMAKE_BINARY_DIR})
file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
file(COPY shaders DESTINATION ${CMAKE_BINARY_DIR})

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

add_executable(metaserver metaserver.cpp)
add_executable(imageview ./imageview.cpp)
add_executable(minififa ./minififa.cpp)

include_directories($(CMAKE_CURRENT_SOURCE_DIR))

if(WIN32)
else()
find_package(PkgConfig REQUIRED)

pkg_check_modules(EPOXY REQUIRED IMPORTED_TARGET epoxy)
pkg_check_modules(GLFW3 REQUIRED IMPORTED_TARGET glfw3)
pkg_check_modules(GLM REQUIRED IMPORTED_TARGET glm)
target_link_libraries(imageview
  PkgConfig::EPOXY
  PkgConfig::GLFW3
  PkgConfig::GLM
)
target_link_libraries(minififa
  PkgConfig::EPOXY
  PkgConfig::GLFW3
  PkgConfig::GLM
)
endif()

find_package(glm CONFIG)
if(GLM_FOUND)
  message("using ${GLM_INCLUDE_DIRS}")
  include_directories(${GLM_INCLUDE_DIRS})
else()
  if(WIN32)
    message(FATAL_ERROR "GLM not found")
  else()
    pkg_check_modules(GLM REQUIRED IMPORTED_TARGET glm)
    target_link_libraries(imageview PkgConfig::GLM)
    target_link_libraries(minififa PkgConfig::GLM)
  endif()
endif(GLM_FOUND)

find_package(Freetype REQUIRED)
if(FREETYPE_FOUND)
  message("using ${FREETYPE_LIBRARIES} ${FREETYPE_INCLUDE_DIRS}")
  include_directories(${FREETYPE_INCLUDE_DIRS})
  target_link_libraries(imageview ${FREETYPE_LIBRARIES})
  target_link_libraries(minififa ${FREETYPE_LIBRARIES})
else()
  message(FATAL_ERROR "FREETYPE not found")
endif(FREETYPE_FOUND)

find_package(PNG)
#pkg_search_module(PNG libpng)
#pkg_check_modules(LIBPNG libpng)
if(PNG_FOUND)
  add_definitions(-DCOMPILE_IMGPNG)
  message("using ${PNG_LIBRARIES} ${PNG_INCLUDE_DIRS}")
  include_directories(${PNG_INCLUDE_DIRS})
  target_link_libraries(imageview ${PNG_LIBRARIES})
  target_link_libraries(minififa ${PNG_LIBRARIES})
else()
  message(WARNING "PNG not found")
endif(PNG_FOUND)

pkg_search_module(JPEGTURBO libturbojpeg)
if(JPEGTURBO_FOUND)
  add_definitions(-DCOMPILE_IMGJPEG)
  message("using ${JPEGTURBO_LIBRARIES} ${JPEGTURBO_INCLUDE_DIRS}")
  include_directories(${JPEGTURBO_INCLUDE_DIRS})
  target_link_libraries(imageview ${JPEGTURBO_LIBRARIES})
  target_link_libraries(minififa ${JPEGTURBO_LIBRARIES})
else()
  find_package(JPEG)
  if(JPEG_FOUND)
    add_definitions(-DCOMPILE_IMGJPEG)
    message("using ${JPEG_LIBRARY} ${JPEG_INCLUDE_DIR}")
    include_directories(${JPEG_INCLUDE_DIR})
    target_link_libraries(imageview ${JPEG_LIBRARY})
    target_link_libraries(minififa ${JPEG_LIBRARY})
  else()
    message(WARNING "JPEG not found")
  endif(JPEG_FOUND)
endif(JPEGTURBO_FOUND)

find_package(TIFF)
if(TIFF_FOUND)
  add_definitions(-DCOMPILE_IMGTIFF)
  message("using ${TIFF_LIBRARY} ${TIFF_INCLUDE_DIR}")
  include_directories(${TIFF_INCLUDE_DIR})
  target_link_libraries(imageview ${TIFF_LIBRARY})
  target_link_libraries(minififa ${TIFF_LIBRARY})
else()
  message(WARNING "TIFF not found")
endif(TIFF_FOUND)

include_directories($(CMAKE_CURRENT_SOURCE_DIR))
# set_target_properties(${exec} PROPERTIES CXX_STANDARD_REQUIRED 17 CXX_EXTENSIONS OFF)
# set_property(TARGET ${exec} PROPERTY CXX_STANDARD 17)

find_package(Threads REQUIRED)
if(THREADS_HAVE_PTHREAD_ARG)
  target_compile_options(metaserver PUBLIC "-pthread")
  target_compile_options(minififa PUBLIC "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(metaserver "${CMAKE_THREAD_LIBS_INIT}")
  target_link_libraries(minififa "${CMAKE_THREAD_LIBS_INIT}")
endif()

find_package(ASSIMP REQUIRED)
if(ASSIMP_FOUND)
  message("using ${ASSIMP_LIBRARIES} ${ASSIMP_INCLUDE_DIRS}")
  include_directories(${ASSIMP_INCLUDE_DIRS})
  target_link_libraries(minififa ${ASSIMP_LIBRARIES})
else()
  message(FATAL_ERROR "ASSIMP not found")
endif(ASSIMP_FOUND)

#find_package(OpenMP REQUIRED)
#if(OPENMP_FOUND)
#  message("using OpenMP")
#  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
#  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
#endif(OPENMP_FOUND)

# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
